Se Creo un Home de portafolios con estilos y botones, efectos

--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nino Padilla</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Nino Padilla - P5.js</h1>
+    <div class="main">
+      <div class="container">
+        <header>
+          <h1>Nino Padilla - P5.js</h1>
+        </header>
+        <div class="botonera">
+          <div class="boton">
+            <a href="https://ninopadilla12.github.io/padilla_nino_proyecto1/"
+              >Proyecto1</a
+            >
+          </div>
+          <div class="boton">
+            <a href="https://ninopadilla12.github.io/padilla_nino_proyecto1/"
+              >Proyecto1</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
