--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         </header>
         <div class="botonera">
           <div class="boton">
-            <a href="https://ninopadilla12.github.io/padilla_nino_proyecto1/"
-              >Proyecto1</a
-            >
+            <a href="https://ninopadilla12.github.io/hola_mundo/">hola_mundo</a>
           </div>
           <div class="boton">
             <a href="https://ninopadilla12.github.io/padilla_nino_proyecto1/"
