Se agrego el botón de condicionales.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <a href="https://ninopadilla12.github.io/hola_mundo/">hola_mundo</a>
       
       </div>
+        <div class="botonera"></div>
+          <div class="boton">
+            <a href="https://ninopadilla12.github.io/Condicionales/">Condicionales</a>
+      
+      </div>
     </div>
   </body>
 </html>
