SE AGREGO EL COMPUTER VISION

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
         <div class="botonera"></div>
           <div class="boton">
             <a href="https://ninopadilla12.github.io/Condicionales/">Condicionales</a>
-      
+
+          </div>
+        <div class="botonera"></div>
+          <div class="boton">
+            <a href=" https://ninopadilla12.github.io/computer_vision/">Computer Vision</a>
       </div>
     </div>
   </body>
