--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
           <div class="boton">
             <a href=" https://ninopadilla12.github.io/computer_vision/">Computer Vision</a>
       </div>
-    </div>
+          
+        <div class="botonera"></div>
+          <div class="boton">
+            <a href="https://ninopadilla12.github.io/programaci-n_orientada_a_objetos/">Programación Orientada a Objetos</a>
+            </div>
+            
   </body>
 </html>
