--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
         <div class="botonera">
           <div class="boton">
-            <a href="https://ninopadilla12.github.io/hola_mundo/">hola_mundo</a>
+            <a href="https://ninopadilla12.github.io/hola_mundo/">Hola_mundo</a>
           </div>
           <div class="boton">
             <a href="https://ninopadilla12.github.io/Condicionales/"
@@ -43,6 +43,14 @@
           </div>
           <div class="boton">
             <a href="https://ninopadilla12.github.io/For_loop/">For Loop</a>
+          </div>
+          <div class="boton">
+            <a href="https://ninopadilla12.github.io/SLIDER/">Slider</a>
+          </div>
+          <div class="boton">
+            <a href="https://ninopadilla12.github.io/Tiles/"
+              >Wave Function Collpase</a
+            >
           </div>
         </div>
       </div>
