BOTON Machine-Learning-Project

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
               >Wave Function Collpase</a
             >
           </div>
-        </div>
+          <div class="boton">
+            <a href="https://ninopadilla12.github.io/Machine-Learning-Project/"
+              >Machine Learning Project</a>
       </div>
     </div>
 
